[metadata]
name = prejinja
version = 0.0.1
description = A Jinja2 alternative to Babel and a Jinja2 pre-compiler.
author = Giacomo Marchioro
author_email = marchiorogiacomo@gmail.com
license = MIT
url = https://github.com/giacomomarchioro/prejinja
project_urls =
    Source = https://github.com/giacomomarchioro/prejinja/tree/main/prejinja
long_description = file: README.md
long_description_content_type = text; charset=UTF-8
platforms = any
classifiers =
    Development Status :: 5 - Production/Stable
    Topic :: Utilities
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Operating System :: Unix
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows


[options]
packages = prejinja
install_requires =
    jinja2

[options.entry_points]
console_scripts =
    prejinjaget = prejinja.CLIgetText:preJinjaGet
    prejinjaput = prejinja.CLIprecompiler:preJinjaPut